modifyin the file checkpoint path

--- a/notebooks/DETR_Attention_Visualisation_on_Multi-MNIST.ipynb
+++ b/notebooks/DETR_Attention_Visualisation_on_Multi-MNIST.ipynb
@@ -32,7 +32,19 @@
     "colab_type": "code",
     "id": "V1OPEeVOYTEV"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cloning into 'detr'...\n",
+      "remote: Enumerating objects: 126, done.\u001b[K\n",
+      "remote: Total 126 (delta 0), reused 0 (delta 0), pack-reused 126\u001b[K\n",
+      "Receiving objects: 100% (126/126), 55.64 MiB | 6.19 MiB/s, done.\n",
+      "Resolving deltas: 100% (47/47), done.\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -47,7 +59,12 @@
     "import torch\n",
     "from torch import nn\n",
     "import torchvision.transforms.functional as F\n",
-    "torch.set_grad_enabled(False);"
+    "torch.set_grad_enabled(False);\n",
+    "\n",
+    "!git clone https://github.com/rarefin/detr.git --single-branch --branch multi-mnist\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('detr')"
    ]
   },
   {
@@ -101,7 +118,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e95cd51ab734b2c9e1f5a3c9cab5ef0",
+       "model_id": "35d473787b714db4b4faf1ab247f7430",
        "version_major": 2,
        "version_minor": 0
       },
@@ -121,7 +138,7 @@
     }
    ],
    "source": [
-    "torch.hub.download_url_to_file('https://srv-file16.gofile.io/download/CTtvQZ/DETR_Multi-MNIST.pt', './DETR_Multi-MNIST.pt')\n",
+    "torch.hub.download_url_to_file('https://github.com/rarefin/detr/raw/multi-mnist/outputs/DETR_Multi-MNIST.pt', './DETR_Multi-MNIST.pt')\n",
     "model = torch.load('./DETR_Multi-MNIST.pt')\n",
     "model.eval();"
    ]
@@ -146,7 +163,7 @@
    },
    "outputs": [],
    "source": [
-    "url = 'https://srv-file12.gofile.io/download/w7ZhZw/1.jpg'\n",
+    "url = 'https://github.com/rarefin/detr/raw/multi-mnist/outputs/sample_images/1.jpg'\n",
     "im = Image.open(requests.get(url, stream=True).raw)"
    ]
   },
@@ -516,7 +533,7 @@
     "    def setup_widgets(self):\n",
     "        self.sliders = [\n",
     "            widgets.Text(\n",
-    "                value='https://srv-file12.gofile.io/download/w7ZhZw/0.jpg',\n",
+    "                value='https://github.com/rarefin/detr/raw/multi-mnist/outputs/sample_images/0.jpg',\n",
     "                placeholder='Type something',\n",
     "                description='URL (ENTER):',\n",
     "                disabled=False,\n",
@@ -712,12 +729,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d144b345c9974198a3ffb3d338660814",
+       "model_id": "96b2d87e0c064b6fa2f2edeb78cd4cbb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Text(value='https://srv-file12.gofile.io/download/w7ZhZw/0.jpg', continuous_update=False, descr…"
+       "VBox(children=(Text(value='https://github.com/rarefin/detr/raw/multi-mnist/outputs/sample_images/0.jpg', conti…"
       ]
      },
      "metadata": {},
