--- a/notebooks/DETR_DEMO_Multi-MNIST.ipynb
+++ b/notebooks/DETR_DEMO_Multi-MNIST.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "In this notebook I have shown a demo of DETR (Detection Transformer) for multi digit detection in images\n",
     "\n",
-    "I have trained a model and stored that model in the cloud (https://srv-file16.gofile.io/download/CTtvQZ/DETR_Multi-MNIST.pt). Also stored some images for the demo purposes.\n",
+    "I have trained a model and stored that model in the cloud (https://github.com/rarefin/detr/raw/multi-mnist/outputs/DETR_Multi-MNIST.pt). Also stored some images for the demo purposes.\n",
     "\n",
     "Let's start with some common imports."
    ]
@@ -24,9 +24,22 @@
     "colab_type": "code",
     "id": "Jf59UNQ37QhJ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cloning into 'detr'...\n",
+      "remote: Enumerating objects: 126, done.\u001b[K\n",
+      "remote: Total 126 (delta 0), reused 0 (delta 0), pack-reused 126\u001b[K\n",
+      "Receiving objects: 100% (126/126), 55.64 MiB | 15.09 MiB/s, done.\n",
+      "Resolving deltas: 100% (47/47), done.\n"
+     ]
+    }
+   ],
    "source": [
     "from PIL import Image\n",
+    "import cloudpickle\n",
     "import requests\n",
     "import matplotlib.pyplot as plt\n",
     "%config InlineBackend.figure_format = 'retina'\n",
@@ -34,7 +47,12 @@
     "import torch\n",
     "from torch import nn\n",
     "import torchvision.transforms.functional as F\n",
-    "torch.set_grad_enabled(False);"
+    "torch.set_grad_enabled(False);\n",
+    "\n",
+    "!git clone https://github.com/rarefin/detr.git --single-branch --branch multi-mnist\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('detr')"
    ]
   },
   {
@@ -111,7 +129,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84aadf541d51454c859d53acefafbe4e",
+       "model_id": "c3eac5b20549434dab51ab35c102b195",
        "version_major": 2,
        "version_minor": 0
       },
@@ -307,8 +325,8 @@
     }
    ],
    "source": [
-    "torch.hub.download_url_to_file('https://srv-file16.gofile.io/download/CTtvQZ/DETR_Multi-MNIST.pt', './DETR_Multi-MNIST.pt')\n",
-    "model = torch.load('./DETR_Multi-MNIST.pt')\n",
+    "torch.hub.download_url_to_file('https://github.com/rarefin/detr/raw/multi-mnist/outputs/DETR_Multi-MNIST.pt', './DETR_Multi-MNIST.pt')\n",
+    "model = torch.load('DETR_Multi-MNIST.pt')\n",
     "model.eval()"
    ]
   },
@@ -474,7 +492,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BASE_URL = 'https://srv-file12.gofile.io/download/w7ZhZw/'\n",
+    "BASE_URL = 'https://github.com/rarefin/detr/raw/multi-mnist/outputs/sample_images/'\n",
     "images = [Image.open(requests.get(BASE_URL+str(i)+'.jpg', stream=True).raw) for i in range(3)]"
    ]
   },
