--- a/notebooks/Visualizing_Learning_curves.ipynb
+++ b/notebooks/Visualizing_Learning_curves.ipynb
@@ -32,7 +32,7 @@
     {
      "data": {
       "text/plain": [
-       "('./log.txt', <http.client.HTTPMessage at 0x131a909e8>)"
+       "('./log.txt', <http.client.HTTPMessage at 0x130c76c88>)"
       ]
      },
      "execution_count": 2,
@@ -41,7 +41,7 @@
     }
    ],
    "source": [
-    "url = 'https://srv-file12.gofile.io/download/veDFCe/log.txt'\n",
+    "url = 'https://raw.githubusercontent.com/rarefin/detr/multi-mnist/outputs/log.txt'\n",
     "urllib.request.urlretrieve(url, \"./log.txt\")"
    ]
   },
