Training notebook added

--- a/notebooks/DETR_Attention_Visualisation_on_Multi-MNIST.ipynb
+++ b/notebooks/DETR_Attention_Visualisation_on_Multi-MNIST.ipynb
@@ -32,22 +32,10 @@
     "colab_type": "code",
     "id": "V1OPEeVOYTEV"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cloning into 'detr'...\n",
-      "remote: Enumerating objects: 126, done.\u001b[K\n",
-      "remote: Total 126 (delta 0), reused 0 (delta 0), pack-reused 126\u001b[K\n",
-      "Receiving objects: 100% (126/126), 55.64 MiB | 6.19 MiB/s, done.\n",
-      "Resolving deltas: 100% (47/47), done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
-    "\n",
+    "import os\n",
     "from PIL import Image\n",
     "import requests\n",
     "import matplotlib.pyplot as plt\n",
@@ -61,7 +49,8 @@
     "import torchvision.transforms.functional as F\n",
     "torch.set_grad_enabled(False);\n",
     "\n",
-    "!git clone https://github.com/rarefin/detr.git --single-branch --branch multi-mnist\n",
+    "if not os.path.exists('detr'):\n",
+    "  !git clone https://github.com/rarefin/detr.git --single-branch --branch multi-mnist\n",
     "\n",
     "import sys\n",
     "sys.path.append('detr')"
@@ -118,7 +107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35d473787b714db4b4faf1ab247f7430",
+       "model_id": "6985446e93a74bb0abfac968cb1df9e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -729,7 +718,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "96b2d87e0c064b6fa2f2edeb78cd4cbb",
+       "model_id": "3d8b77830381460aaa4d41b78115347d",
        "version_major": 2,
        "version_minor": 0
       },
