--- a/notebooks/DETR_DEMO_Multi-MNIST.ipynb
+++ b/notebooks/DETR_DEMO_Multi-MNIST.ipynb
@@ -24,21 +24,10 @@
     "colab_type": "code",
     "id": "Jf59UNQ37QhJ"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cloning into 'detr'...\n",
-      "remote: Enumerating objects: 126, done.\u001b[K\n",
-      "remote: Total 126 (delta 0), reused 0 (delta 0), pack-reused 126\u001b[K\n",
-      "Receiving objects: 100% (126/126), 55.64 MiB | 15.09 MiB/s, done.\n",
-      "Resolving deltas: 100% (47/47), done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from PIL import Image\n",
+    "import os\n",
     "import cloudpickle\n",
     "import requests\n",
     "import matplotlib.pyplot as plt\n",
@@ -49,7 +38,8 @@
     "import torchvision.transforms.functional as F\n",
     "torch.set_grad_enabled(False);\n",
     "\n",
-    "!git clone https://github.com/rarefin/detr.git --single-branch --branch multi-mnist\n",
+    "if not os.path.exists('detr'):\n",
+    "  !git clone https://github.com/rarefin/detr.git --single-branch --branch multi-mnist\n",
     "\n",
     "import sys\n",
     "sys.path.append('detr')"
@@ -129,7 +119,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3eac5b20549434dab51ab35c102b195",
+       "model_id": "9752926b2332467bb560c9258dc5f200",
        "version_major": 2,
        "version_minor": 0
       },
