--- a/notebooks/Visualizing_Learning_curves.ipynb
+++ b/notebooks/Visualizing_Learning_curves.ipynb
@@ -32,7 +32,7 @@
     {
      "data": {
       "text/plain": [
-       "('./log.txt', <http.client.HTTPMessage at 0x130c76c88>)"
+       "('./log.txt', <http.client.HTTPMessage at 0x13843a6d8>)"
       ]
      },
      "execution_count": 2,
@@ -69,7 +69,6 @@
     "                    style=['-', '--']\n",
     "                )\n",
     "    for ax, field in zip(axs, fields):\n",
-    "#         ax.legend([Path(p).name for p in logs])\n",
     "        ax.legend([p for p in ['train', 'test']])\n",
     "        ax.set_title(field)"
    ]
